--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
   },
   "devDependencies": {
     "@types/react": "^0.14.50",
-    "@types/react-dom": "^0.14.19"
+    "@types/react-dom": "^0.14.19",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "ts-loader": "^1.2.2",
+    "webpack": "^1.13.3",
+    "webpack-notifier": "^1.4.1"
   }
 }
